test-aws/aws_configs/ap-northeast-2/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-1d2ea975",
     "NetworkAclId": "acl-f0bdef99",
     "SubnetId": "subnet-a0a6fbc9"
    },
    {
     "NetworkAclAssociationId": "aclassoc-5787f23a",
     "NetworkAclId": "acl-f0bdef99",
     "SubnetId": "subnet-874292fc"
    },
    {
     "NetworkAclAssociationId": "aclassoc-1e2ea976",
     "NetworkAclId": "acl-f0bdef99",
     "SubnetId": "subnet-2664f36b"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-f0bdef99",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-732a661a"
  }
 ]
}
